[gd_scene load_steps=13 format=3 uid="uid://bhvkm866011qa"]

[ext_resource type="Script" uid="uid://d0waherf7c61m" path="res://Assets/Script/player.gd" id="1_iwpo4"]
[ext_resource type="Texture2D" uid="uid://b703gaphrgjqc" path="res://Assets/Imagens/360_F_471697584_TiR5pd2ougeD71LjfST1OtPGWrZvxpOZ-removebg-preview.png" id="2_b65pp"]
[ext_resource type="Script" uid="uid://dgphrs6wsxbbh" path="res://Assets/Scenes/icone_tutorial.gd" id="2_syrs6"]
[ext_resource type="Texture2D" uid="uid://sujf2adqkq22" path="res://Assets/Imagens/Captura_de_tela_2025-08-17_232118-removebg-preview.png" id="3_gsoyd"]
[ext_resource type="FontFile" uid="uid://dmh7ufx2seoum" path="res://Assets/Fonts/alagard.ttf" id="4_h0edo"]
[ext_resource type="Texture2D" uid="uid://csdwsmgncxyou" path="res://Assets/Imagens/Captura_de_tela_2025-08-17_232130-removebg-preview.png" id="4_syrs6"]

[sub_resource type="Shader" id="Shader_iwpo4"]
code = "shader_type canvas_item;
uniform sampler2D ST : hint_screen_texture, filter_linear_mipmap_anisotropic;
uniform vec4 scanline_color : source_color = vec4(0, 0, 0, 1);
uniform vec4 flicker_color : source_color = vec4(0, 0, 0, 1);
uniform float scanlines_count = 10.0;
uniform float scanlines_intensity = 0.05;
uniform float flicker_speed = 30.0;
uniform float flicker_intensity : hint_range(0.0, 1.0, 0.001) = 0.025;
uniform float color_offset = 1.5;
uniform float blur = 0.15;

void fragment() {
	vec2 pixel_size = 1.0 / vec2(textureSize(ST, 0));
	float offset = color_offset * pixel_size.x;
	
	// chromatic aberration
	float channel_r = textureLod(ST, SCREEN_UV + vec2(offset, 0.0), blur).r;
	float channel_g = textureLod(ST, SCREEN_UV, blur).g;
	float channel_b = textureLod(ST, SCREEN_UV + vec2(-offset, 0.0), blur).b;
	vec4 aberrate = vec4(channel_r, channel_g, channel_b, 1.0);
	
	// scanline flicker
	float mix_value = sin((UV.y - (TIME * flicker_speed)) * 10.0) * flicker_intensity;
	vec4 flicker = mix(aberrate, flicker_color, mix_value);

	// scanlines
	float scanlines = sin(FRAGCOORD.y * scanlines_count) * scanlines_intensity;
	vec4 final = mix(flicker, scanline_color, scanlines);
	
	COLOR = final;
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vd578"]
shader = SubResource("Shader_iwpo4")
shader_parameter/scanline_color = Color(0, 0, 0, 1)
shader_parameter/flicker_color = Color(0, 0, 0, 1)
shader_parameter/scanlines_count = 10.0
shader_parameter/scanlines_intensity = 0.05
shader_parameter/flicker_speed = 30.0
shader_parameter/flicker_intensity = 0.025
shader_parameter/color_offset = 1.5
shader_parameter/blur = 0.15

[sub_resource type="CapsuleMesh" id="CapsuleMesh_4arys"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_iwpo4"]

[sub_resource type="SystemFont" id="SystemFont_iwpo4"]
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_fb3t6"]
font = SubResource("SystemFont_iwpo4")
font_size = 32
font_color = Color(0.690196, 0.690196, 0.690196, 1)

[node name="player" type="CharacterBody3D"]
script = ExtResource("1_iwpo4")

[node name="camera_pivot" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="camera_pivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.858909, 0)

[node name="interacao" type="RayCast3D" parent="camera_pivot/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 0.999888, -0.0149569, 0, 0.0149569, 0.999888, 0, 0, 0)
target_position = Vector3(0, 0, -5)
debug_shape_custom_color = Color(1, 0, 0, 1)
debug_shape_thickness = 1

[node name="CarryObjectMaker" type="Marker3D" parent="camera_pivot/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.448337, -0.220083, -0.462344)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
material_override = SubResource("ShaderMaterial_vd578")
mesh = SubResource("CapsuleMesh_4arys")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_iwpo4")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="interact_label" type="Label" parent="CanvasLayer"]
texture_filter = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.501
anchor_right = 0.5
anchor_bottom = 0.501
offset_left = -25.0
offset_top = -22.648
offset_right = 1.0
offset_bottom = 22.352
grow_horizontal = 2
grow_vertical = 2
text = "O"
label_settings = SubResource("LabelSettings_fb3t6")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
modulate = Color(0.129558, 0.129558, 0.129558, 1)
self_modulate = Color(0.541176, 0.541176, 0.541176, 0.458824)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = 216.0
offset_right = -2.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2

[node name="interact_monitor" type="Label" parent="CanvasLayer"]
texture_filter = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -29.0
offset_top = 545.0
offset_right = -14.0
offset_bottom = 575.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.446777, 0.446777, 0.446777, 1)
theme_override_colors/font_outline_color = Color(0.470588, 0.470588, 0.470588, 0)
theme_override_font_sizes/font_size = 21
text = "F"

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 1153.0
offset_bottom = 648.0
script = ExtResource("2_syrs6")

[node name="360F471697584TiR5Pd2OugeD71LjfSt1OtPgWrZvxpOz-removebg-preview" type="Sprite2D" parent="CanvasLayer/Control"]
texture_filter = 1
position = Vector2(813, 158)
scale = Vector2(0.3, 0.3)
texture = ExtResource("2_b65pp")

[node name="Label" type="Label" parent="CanvasLayer/Control/360F471697584TiR5Pd2OugeD71LjfSt1OtPgWrZvxpOz-removebg-preview"]
texture_filter = 1
offset_left = -177.5
offset_top = 147.5
offset_right = 177.5
offset_bottom = 201.5
theme_override_fonts/font = ExtResource("4_h0edo")
theme_override_font_sizes/font_size = 39
text = "use para se mover "

[node name="CapturaDeTela2025-08-17232118-removebg-preview" type="Sprite2D" parent="CanvasLayer/Control"]
texture_filter = 1
position = Vector2(903, 174)
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_gsoyd")

[node name="CapturaDeTela2025-08-17232130-removebg-preview" type="Sprite2D" parent="CanvasLayer/Control/CapturaDeTela2025-08-17232118-removebg-preview"]
texture_filter = 1
position = Vector2(68.5, -1)
texture = ExtResource("4_syrs6")

[node name="Label2" type="Label" parent="CanvasLayer/Control/CapturaDeTela2025-08-17232118-removebg-preview"]
texture_filter = 1
offset_left = -21.2499
offset_top = 28.75
offset_right = 92.7501
offset_bottom = 51.75
theme_override_fonts/font = ExtResource("4_h0edo")
theme_override_font_sizes/font_size = 16
text = "para intera√ßoes"

[node name="Label" type="Label" parent="."]
texture_filter = 1
offset_left = 561.0
offset_top = 309.0
offset_right = 566.0
offset_bottom = 358.0
text = ".
"
